--- a/index.html
+++ b/index.html
@@ -1,30 +1,75 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Pizza Legends</title>
-
+    <title>The Parts We Give | The Game</title>
+    <base href="/TPWG/" />
     <!-- Font -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ribeye&display=swap" rel="stylesheet">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com" />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com" />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ribeye&display=swap"
+      rel="stylesheet" />
     <!-- Overworld styles -->
-    <link href="/styles/global.css" type="text/css" rel="stylesheet">
-    <link href="/styles/TextMessage.css" type="text/css" rel="stylesheet">
-    <link href="/styles/SceneTransition.css" type="text/css" rel="stylesheet">
-    <link href="/styles/KeyboardMenu.css" type="text/css" rel="stylesheet">
-    <link href="/styles/Hud.css" type="text/css" rel="stylesheet">
-    <link href="/styles/TitleScreen.css" type="text/css" rel="stylesheet">
+    <link
+      href="/styles/global.css"
+      type="text/css"
+      rel="stylesheet" />
+    <link
+      href="/styles/TextMessage.css"
+      type="text/css"
+      rel="stylesheet" />
+    <link
+      href="/styles/SceneTransition.css"
+      type="text/css"
+      rel="stylesheet" />
+    <link
+      href="/styles/KeyboardMenu.css"
+      type="text/css"
+      rel="stylesheet" />
+    <link
+      href="/styles/Hud.css"
+      type="text/css"
+      rel="stylesheet" />
+    <link
+      href="/styles/TitleScreen.css"
+      type="text/css"
+      rel="stylesheet" />
     <!-- Battle css -->
-    <link href="/styles/Battle.css" type="text/css" rel="stylesheet">
-    <link href="/styles/Combatant.css" type="text/css" rel="stylesheet">
-    <link href="/styles/SubmissionMenu.css" type="text/css" rel="stylesheet">
-    <link href="/styles/Team.css" type="text/css" rel="stylesheet">
-    <link href="/styles/Menus.css" type="text/css" rel="stylesheet">
+    <link
+      href="/styles/Battle.css"
+      type="text/css"
+      rel="stylesheet" />
+    <link
+      href="/styles/Combatant.css"
+      type="text/css"
+      rel="stylesheet" />
+    <link
+      href="/styles/SubmissionMenu.css"
+      type="text/css"
+      rel="stylesheet" />
+    <link
+      href="/styles/Team.css"
+      type="text/css"
+      rel="stylesheet" />
+    <link
+      href="/styles/Menus.css"
+      type="text/css"
+      rel="stylesheet" />
   </head>
   <body>
     <div class="game-container">
-      <canvas class="game-canvas" width="352" height="198"></canvas>
+      <canvas
+        class="game-canvas"
+        width="352"
+        height="198"></canvas>
     </div>
     <p class="how-to-play">Use Arrow Keys to move. Enter to prompt/talk.</p>
 
@@ -68,6 +113,5 @@
     <script src="/Battle/BattleAnimations.js"></script>
 
     <script src="/init.js"></script>
-
   </body>
 </html>
