--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <title>The Parts We Give | The Game</title>
-    <base href="/TPWG/" />
     <!-- Font -->
     <link
       rel="preconnect"
@@ -19,48 +18,48 @@
       rel="stylesheet" />
     <!-- Overworld styles -->
     <link
-      href="/styles/global.css"
+      href="styles/global.css"
       type="text/css"
       rel="stylesheet" />
     <link
-      href="/styles/TextMessage.css"
+      href="styles/TextMessage.css"
       type="text/css"
       rel="stylesheet" />
     <link
-      href="/styles/SceneTransition.css"
+      href="styles/SceneTransition.css"
       type="text/css"
       rel="stylesheet" />
     <link
-      href="/styles/KeyboardMenu.css"
+      href="styles/KeyboardMenu.css"
       type="text/css"
       rel="stylesheet" />
     <link
-      href="/styles/Hud.css"
+      href="styles/Hud.css"
       type="text/css"
       rel="stylesheet" />
     <link
-      href="/styles/TitleScreen.css"
+      href="styles/TitleScreen.css"
       type="text/css"
       rel="stylesheet" />
     <!-- Battle css -->
     <link
-      href="/styles/Battle.css"
+      href="styles/Battle.css"
       type="text/css"
       rel="stylesheet" />
     <link
-      href="/styles/Combatant.css"
+      href="styles/Combatant.css"
       type="text/css"
       rel="stylesheet" />
     <link
-      href="/styles/SubmissionMenu.css"
+      href="styles/SubmissionMenu.css"
       type="text/css"
       rel="stylesheet" />
     <link
-      href="/styles/Team.css"
+      href="styles/Team.css"
       type="text/css"
       rel="stylesheet" />
     <link
-      href="/styles/Menus.css"
+      href="styles/Menus.css"
       type="text/css"
       rel="stylesheet" />
   </head>
@@ -74,44 +73,44 @@
     <p class="how-to-play">Use Arrow Keys to move. Enter to prompt/talk.</p>
 
     <!-- Content -->
-    <script src="/Content/pizzas.js"></script>
-    <script src="/Content/actions.js"></script>
-    <script src="/Content/enemies.js"></script>
+    <script src="Content/pizzas.js"></script>
+    <script src="Content/actions.js"></script>
+    <script src="Content/enemies.js"></script>
 
     <!-- State -->
-    <script src="/State/PlayerState.js"></script>
+    <script src="State/PlayerState.js"></script>
 
     <!-- Scripts -->
-    <script src="/utils.js"></script>
-    <script src="/DirectionInput.js"></script>
-    <script src="/Overworld.js"></script>
-    <script src="/GameObject.js"></script>
-    <script src="/Person.js"></script>
-    <script src="/PizzaStone.js"></script>
-    <script src="/Sprite.js"></script>
-    <script src="/OverworldMap.js"></script>
-    <script src="/OverworldEvent.js"></script>
-    <script src="/TextMessage.js"></script>
-    <script src="/KeyPressListener.js"></script>
-    <script src="/RevealingText.js"></script>
-    <script src="/SceneTransition.js"></script>
-    <script src="/KeyboardMenu.js"></script>
-    <script src="/Hud.js"></script>
-    <script src="/PauseMenu.js"></script>
-    <script src="/CraftingMenu.js"></script>
-    <script src="/Progress.js"></script>
-    <script src="/TitleScreen.js"></script>
+    <script src="utils.js"></script>
+    <script src="DirectionInput.js"></script>
+    <script src="Overworld.js"></script>
+    <script src="GameObject.js"></script>
+    <script src="Person.js"></script>
+    <script src="PizzaStone.js"></script>
+    <script src="Sprite.js"></script>
+    <script src="OverworldMap.js"></script>
+    <script src="OverworldEvent.js"></script>
+    <script src="TextMessage.js"></script>
+    <script src="KeyPressListener.js"></script>
+    <script src="RevealingText.js"></script>
+    <script src="SceneTransition.js"></script>
+    <script src="KeyboardMenu.js"></script>
+    <script src="Hud.js"></script>
+    <script src="PauseMenu.js"></script>
+    <script src="CraftingMenu.js"></script>
+    <script src="Progress.js"></script>
+    <script src="TitleScreen.js"></script>
 
     <!-- Battle -->
-    <script src="/Battle/Battle.js"></script>
-    <script src="/Battle/Combatant.js"></script>
-    <script src="/Battle/Team.js"></script>
-    <script src="/Battle/SubmissionMenu.js"></script>
-    <script src="/Battle/ReplacementMenu.js"></script>
-    <script src="/Battle/BattleEvent.js"></script>
-    <script src="/Battle/TurnCycle.js"></script>
-    <script src="/Battle/BattleAnimations.js"></script>
+    <script src="Battle/Battle.js"></script>
+    <script src="Battle/Combatant.js"></script>
+    <script src="Battle/Team.js"></script>
+    <script src="Battle/SubmissionMenu.js"></script>
+    <script src="Battle/ReplacementMenu.js"></script>
+    <script src="Battle/BattleEvent.js"></script>
+    <script src="Battle/TurnCycle.js"></script>
+    <script src="Battle/BattleAnimations.js"></script>
 
-    <script src="/init.js"></script>
+    <script src="init.js"></script>
   </body>
 </html>
