More absolute to relative linking

--- a/index.html
+++ b/index.html
@@ -18,48 +18,48 @@
       rel="stylesheet" />
     <!-- Overworld styles -->
     <link
-      href="styles/global.css"
+      href="./styles/global.css"
       type="text/css"
       rel="stylesheet" />
     <link
-      href="styles/TextMessage.css"
+      href="./styles/TextMessage.css"
       type="text/css"
       rel="stylesheet" />
     <link
-      href="styles/SceneTransition.css"
+      href="./styles/SceneTransition.css"
       type="text/css"
       rel="stylesheet" />
     <link
-      href="styles/KeyboardMenu.css"
+      href="./styles/KeyboardMenu.css"
       type="text/css"
       rel="stylesheet" />
     <link
-      href="styles/Hud.css"
+      href="./styles/Hud.css"
       type="text/css"
       rel="stylesheet" />
     <link
-      href="styles/TitleScreen.css"
+      href="./styles/TitleScreen.css"
       type="text/css"
       rel="stylesheet" />
     <!-- Battle css -->
     <link
-      href="styles/Battle.css"
+      href="./styles/Battle.css"
       type="text/css"
       rel="stylesheet" />
     <link
-      href="styles/Combatant.css"
+      href="./styles/Combatant.css"
       type="text/css"
       rel="stylesheet" />
     <link
-      href="styles/SubmissionMenu.css"
+      href="./styles/SubmissionMenu.css"
       type="text/css"
       rel="stylesheet" />
     <link
-      href="styles/Team.css"
+      href="./styles/Team.css"
       type="text/css"
       rel="stylesheet" />
     <link
-      href="styles/Menus.css"
+      href="./styles/Menus.css"
       type="text/css"
       rel="stylesheet" />
   </head>
