--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Ribeye&display=swap"
       rel="stylesheet" />
+    <!-- Favicon -->
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="/favicon.ico" />
     <!-- Overworld styles -->
     <link
       href="./styles/global.css"
