--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Ribeye&display=swap"
       rel="stylesheet" />
+    <!-- Font Press Start 2p -->
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com" />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anton&family=Charm:wght@400;700&family=Delius&family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Kode+Mono:wght@400..700&family=Lexend+Deca:wght@100..900&family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Press+Start+2P&family=Quantico:ital,wght@0,400;0,700;1,400;1,700&family=Rowdies:wght@300;400;700&display=swap"
+      rel="stylesheet" />
     <!-- Favicon -->
     <link
       rel="icon"
@@ -88,7 +99,7 @@
       <canvas
         class="game-canvas"
         width="352"
-        height="198"></canvas>
+        height="625"></canvas>
     </div>
     <p class="how-to-play">Use Arrow Keys to move. Enter to prompt/talk.</p>
 
@@ -107,6 +118,7 @@
     <script src="GameObject.js"></script>
     <script src="Person.js"></script>
     <script src="PizzaStone.js"></script>
+    <script src="Plates.js"></script>
     <script src="Sprite.js"></script>
     <script src="OverworldMap.js"></script>
     <script src="OverworldEvent.js"></script>
