--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
       type="text/css"
       rel="stylesheet" />
     <link
+      href="./styles/YesNoPrompt.css"
+      type="text/css"
+      rel="stylesheet" />
+    <link
       href="./styles/TextMessage.css"
       type="text/css"
       rel="stylesheet" />
@@ -103,25 +107,32 @@
     </div>
     <p class="how-to-play">Use Arrow Keys to move. Enter to prompt/talk.</p>
 
+    <script src="utils.js"></script>
     <!-- Content -->
     <script src="Content/pizzas.js"></script>
     <script src="Content/actions.js"></script>
     <script src="Content/enemies.js"></script>
+    <script src="Content/Quests.js"></script>
 
     <!-- State -->
     <script src="State/PlayerState.js"></script>
 
     <!-- Scripts -->
-    <script src="utils.js"></script>
+    <script src="QuestTimer.js"></script>
     <script src="DirectionInput.js"></script>
-    <script src="Overworld.js"></script>
     <script src="GameObject.js"></script>
     <script src="Person.js"></script>
     <script src="PizzaStone.js"></script>
     <script src="Plates.js"></script>
+    <script src="Nerf.js"></script>
+    <script src="NerfPile.js"></script>
     <script src="Sprite.js"></script>
+    <script src="GameObjectClasses.js"></script>
     <script src="OverworldMap.js"></script>
+    <script src="QuestManager.js"></script>
+    <script src="Overworld.js"></script>
     <script src="OverworldEvent.js"></script>
+    <script src="YesNoPrompt.js"></script>
     <script src="TextMessage.js"></script>
     <script src="KeyPressListener.js"></script>
     <script src="RevealingText.js"></script>
