Fixed player change behavior

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
       type="text/css"
       rel="stylesheet" />
     <link
+      href="./styles/QuestTimer.css"
+      type="text/css"
+      rel="stylesheet" />
+    <link
       href="./styles/YesNoPrompt.css"
       type="text/css"
       rel="stylesheet" />
