--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="/favicon.ico" />
+      href="./favicon.ico" />
     <!-- Overworld styles -->
     <link
       href="./styles/global.css"
