Added art and text and WelcomeScreen

--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
       type="text/css"
       rel="stylesheet" />
     <link
+      href="./styles/WelcomeMessage.css"
+      type="text/css"
+      rel="stylesheet" />
+    <link
       href="./styles/TextMessage.css"
       type="text/css"
       rel="stylesheet" />
@@ -109,7 +113,10 @@
         width="352"
         height="625"></canvas>
     </div>
-    <p class="how-to-play">Use Arrow Keys to move. Enter to prompt/talk.</p>
+    <p class="how-to-play">
+      Use Arrow Keys to move. Enter to select/talk. <br />Press escape to pause
+      and open the menu.
+    </p>
 
     <script src="utils.js"></script>
     <!-- Content -->
@@ -138,6 +145,7 @@
     <script src="OverworldEvent.js"></script>
     <script src="YesNoPrompt.js"></script>
     <script src="TextMessage.js"></script>
+    <script src="WelcomeMessage.js"></script>
     <script src="KeyPressListener.js"></script>
     <script src="RevealingText.js"></script>
     <script src="SceneTransition.js"></script>
