--- a/index.html
+++ b/index.html
@@ -117,6 +117,16 @@
       Use Arrow Keys to move. Enter to select/talk. <br />Press escape to pause
       and open the menu.
     </p>
+    <div class="credits">
+      <p>
+        The Parts We Give, The Game is a FABLE ARTS production and was created,
+        produced, and coded by Daniel Pini. <br /><br />The Parts We Give, The
+        Game accompanies Christine Pan's Song Cycle of the same name.
+        <br /><br />Read more
+        <a href="https://www.christinepanmusic.com/">here</a>.
+        <p>If you are one of our lovely beta testers, please note that this is an early preview.<br /><br />All bug notes can be sent to <a href="mailto:daniel@danielpini.com">daniel@danielpini.com</a> </p>
+      </p>
+    </div>
 
     <script src="utils.js"></script>
     <!-- Content -->
