Added Table class and cutscene and mum character

--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
     <script src="Person.js"></script>
     <script src="PizzaStone.js"></script>
     <script src="Plates.js"></script>
+    <script src="Table.js"></script>
     <script src="Nerf.js"></script>
     <script src="NerfPile.js"></script>
     <script src="Sprite.js"></script>
