Added quests, added art

--- a/index.html
+++ b/index.html
@@ -144,12 +144,13 @@
     <script src="GameObject.js"></script>
     <script src="Person.js"></script>
     <script src="PizzaStone.js"></script>
+    <script src="GameObjectClasses.js"></script>
     <script src="Plates.js"></script>
+    <script src="Chopsticks.js"></script>
     <script src="Table.js"></script>
     <script src="Nerf.js"></script>
     <script src="NerfPile.js"></script>
     <script src="Sprite.js"></script>
-    <script src="GameObjectClasses.js"></script>
     <script src="OverworldMap.js"></script>
     <script src="QuestManager.js"></script>
     <script src="Overworld.js"></script>
