Fixed some bugs in timer and arrow

--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
       href="./styles/TitleScreen.css"
       type="text/css"
       rel="stylesheet" />
+    <link
+      href="./styles/EndGameMessage.css"
+      type="text/css"
+      rel="stylesheet" />
     <!-- Battle css -->
     <link
       href="./styles/Battle.css"
@@ -173,6 +177,7 @@
     <script src="YesNoPrompt.js"></script>
     <script src="TextMessage.js"></script>
     <script src="WelcomeMessage.js"></script>
+    <script src="EndGameMessage.js"></script>
     <script src="KeyPressListener.js"></script>
     <script src="RevealingText.js"></script>
     <script src="SceneTransition.js"></script>
