--- a/index.html
+++ b/index.html
@@ -125,15 +125,21 @@
       <p>
         The Parts We Give, The Game is a FABLE ARTS production and was created,
         produced, and coded by Daniel Pini. <br /><br />The Parts We Give, The
-        Game accompanies Christine Pan's Song Cycle of the same name.
+        Game accompanies Christine Pan's Song Cycle of the same name and has
+        been made with cultural and story consultation with Christine.
         <br /><br />Read more
         <a href="https://www.christinepanmusic.com/">here</a>.
       </p>
 
       <p>
         If you are one of our lovely beta testers, please note that this is an
-        early preview.<br /><br />All bug notes can be sent to
-        <a href="mailto:daniel@danielpini.com">daniel@danielpini.com</a>
+        early preview.<br /><br />Please use
+        <a
+          href="https://docs.google.com/forms/d/e/1FAIpQLSckWn40IkIR43s5fk9XuE3EqnQQdk56ycYpL64ScdRtD9ccAA/viewform?usp=sharing&ouid=109196545122115717094"
+          >this form</a
+        >
+        for all bug reports.<br /><br />I hope you enjoy the game and thank you
+        for your help in making it shine!
       </p>
     </div>
 
